# open_rust_mc

./: .gitignore  BENCHMARKS.md  CLAUDE.md  ICSBEP.md  LICENSE  OPTIMIZATION_PLAN.md  PYTHON.md  README.md  RESUME.md  STATUS.md  benchmark_svd_10seeds.txt  benchmark_table_10seeds.txt  paper_results_10seed_backup.txt  paper_results_20260416_1236.txt  results_2026-04-15_2242.txt  resume.md  ruff.toml  run_paper_benchmark.ps1  run_paper_full.ps1  run_pwr_tests.ps1  run_tests.ps1
.github/workflows/: ci.yml
bench/cli_runners/: hmf-001_godiva.json  hmf-001_godiva_svd_k5.json  internal_pwr_pincell.json
bench/icsbep/: heu-comp-inter-003_case-1.json  heu-comp-inter-003_case-2.json  heu-comp-inter-003_case-3.json  heu-comp-inter-003_case-4.json  heu-comp-inter-003_case-5.json  heu-comp-inter-003_case-6.json  heu-comp-inter-003_case-7.json  heu-met-fast-001_case-1.json  heu-met-fast-001_case-2.json  (+367 more)
chains/: partial_xe.json  pwr_actinides.json
cuda_bench/: svd_gpu_bench.cu
docs/: engine-notes.md  gpu-cache-redesign.md  gpu-perf-profiling.md  phase3-handoff.md  stage-c-bench-results.md  stage-c-completion.md  stage-c-data-model.md
outputs/: adjoint_sweep_valid_tol1pct.csv  adjoint_sweep_valid_tol2.5pct.csv  cadis_water_100cm.json  cadis_water_200cm.json  cadis_water_300cm.json  ce_adjoint_cadis_fom.txt  cp_analysis.txt  cpu_hex_minicore_4seeds.txt  cpu_saturation_probe.csv  cuda_runs_after_threshold_tighten.txt  cuda_runs_new_4_v2.txt  cuda_runs_with_local_validation.txt  deplete_pwr_actinides.txt  deplete_pwr_actinides_32d.txt  deplete_pwr_actinides_collapsed.txt  depletion_collapsed_vs_openmc.md  depletion_rust_vs_openmc.md  eventbased_baseline_a1000.csv  eventbased_bucketed_a1000.csv  eventbased_fused_a1000.csv  eventbased_smallnuc_a1000.csv  gpu_hex_minicore_4seeds.txt  gpu_photon_validate.txt  gpu_recursive_parity_run.txt  gpu_synth_cdf_no_cache.txt  gpu_synth_mt4_cdf.txt  gpu_synth_mt4_validation.txt  gpu_warp_cache_bench.txt  gpu_warp_cache_validation.txt  heu-met-fast-001_case-1.ncu-rep  heu-met-fast-001_case-1_ncu.txt  heu-met-fast-008.ncu-rep  heu-met-fast-008_ncu.txt  heu-met-fast-011.ncu-rep  heu-met-fast-011_ncu.txt  heu-met-fast-069_case-1_ncu.txt  heu-sol-therm-001_case-1.ncu-rep  heu-sol-therm-001_case-1_ncu.txt  hmf001_a1000_run.txt  hmf008_refill_refill_2x.csv  (+69 more)
paper/: main.tex  physics_bom.tex  references.bib  svd_cross_section_compression.tex
results/: .gitignore  README.md  pwr_cpu_data.txt  pwr_gpu_data.txt  rank_sweep_godiva_20260416_session.csv
rust_prototype/: .gitignore  Cargo.toml  cpu_trace.csv  gpu_trace.csv
rust_prototype/benches/: reconstruction.rs
rust_prototype/bindings/python/: Cargo.toml  pyproject.toml
rust_prototype/bindings/python/examples/: cache_smoke.py  depletion_xe_demo.py  godiva.py  hex_minicore.py  icsbep_run.py  icsbep_sweep.py  pwr_gamma_heating.py  pwr_pincell.py  run_benchmark.ps1  seed_sweep.py  xs_mode_demo.py  xs_mode_quick.py
rust_prototype/bindings/python/python/open_rust_mc/: __init__.py
rust_prototype/bindings/python/src/: lib.rs
rust_prototype/gpu/cuda/: geom_recursive.cu  geom_recursive_kernels.cu  random_ray_persistent.cu  transport.cu  transport_event_based.cu  transport_recursive.cu  transport_recursive_const.cu
rust_prototype/results/: result_log_17042026_221100.txt  result_log_20042026_1836.txt
rust_prototype/src/: compare.rs  cp_decompose.rs  decompose.rs  error.rs  gpu.rs  gpu_per_nuclide.rs  gpu_random_ray.rs  gpu_recursive.rs  gpu_transport.rs  hardware_profile.rs  hdf5_reader.rs  kernel.rs  lib.rs  loader.rs  main.rs  nuclide.rs  physics_constants.rs  quadrature.rs  table.rs  thermal.rs  wmp.rs
rust_prototype/src/depletion/: chain.rs  chain_io.rs  cram.rs  flux.rs  mapping.rs  matrix.rs  mod.rs  predictor_corrector.rs
rust_prototype/src/geometry/: aabb.rs  bvh.rs  cell.rs  coord.rs  lattice.rs  mod.rs  ray.rs  recursive_smoke.rs  scene.rs  scene_io.rs  shapes.rs  surface.rs  universe.rs
rust_prototype/src/photon/: bremsstrahlung.rs  coherent.rs  compton.rs  data.rs  electron.rs  gpu.rs  hdf5_reader.rs  material.rs  mod.rs  nee.rs  pair.rs  photoelectric.rs  transport.rs
rust_prototype/src/physics/: collision.rs  mod.rs  scatter.rs
rust_prototype/src/random_ray/: adjoint_svd.rs  cadis.rs  fsr.rs  integrator.rs  mgxs.rs  mod.rs  solver.rs
rust_prototype/src/transport/: adjoint_neutron.rs  adjoint_photon.rs  dispatch.rs  event.rs  hybrid_xs.rs  kinetics.rs  material.rs  material_resolve.rs  mod.rs  nuclides.rs  particle.rs  rng.rs  sim_limits.rs  simulate.rs  statepoint.rs  tally.rs  thermal_library.rs  urr_equivalence.rs  weight_window.rs  xs_provider.rs
rust_prototype/src/transport/nuclide_cache/: binary_format.rs  eviction.rs  key.rs  l1_memory.rs  l2_disk.rs  l3_remote.rs  mod.rs  wire_protocol.rs
rust_prototype/tests/: ansi_ans_buildup.rs  brems_nist_cross_check.rs  cache_roundtrip.rs  cs137_pulse_height_validation.rs  cuda_runs.rs  hubbell_compton_differential.rs  icsbep_runs.rs  preview_lattice_descent.rs  scene_io_corpus.rs
scripts/: cache_feasibility_analysis.py  cpu_saturation_probe.ps1  eventbased_baseline_sweep.ps1  eventbased_bucketed_sweep.ps1  eventbased_fused_sweep.ps1  eventbased_smallnuc_sweep.ps1  export_openmc_reference.py  filter_valid_meshes.py  heu_sol_therm_highstat.py  honesty_test.py  hybrid_svd_wmp_experiment.py  import_icsbep.py  inspect_photon_hdf5.py  nnuc_scaling_sweep.ps1  openmc_godiva_tallies.py  openmc_heu_sol_therm.py  openmc_pwr_depletion.py  openmc_pwr_gamma_heating.py  openmc_pwr_ref.py  openmc_scene_runner.py  openmc_water_buildup.py  paper_openmc_benchmark.py  pareto_plot.py  pareto_plot_pwr.py  phase1_extraction.py  phase1_jeff33_extraction.py  phase2_svd_analysis.py  phase3_error_analysis.py  phase4_keff_benchmark.py  phase4_multi_reaction_godiva.py  phase4_pwr_pincell.py  phase5_3_windowed_svd.py  phase5_all_reactions.py  phase5_cross_isotope.py  phase5_hybrid_svd_wmp.py  phase5_multi_reaction.py  plot_adjoint_sweep.py  plot_delta_k_vs_ealf.py  plot_memory_throughput.py  plot_memory_vs_precision.py  (+14 more)
specs/: fix_event_based_gpu_transport
(+40 files in other folders)
