[workspace]
members = [".", "bindings/python"]
resolver = "2"

[package]
name = "open-rust-mc"
version = "0.4.0"
edition = "2024"
license = "MIT"

[dependencies]
# Math + data foundation extracted into its own crate
# (https://github.com/sorcerer86pt/Rust-MC-SimulationLib).
# Path-dep'd while the two crates co-evolve; switch to a versioned
# crates.io release once rust-mc-sim is published.
rust-mc-sim = { path = "../../rust-mc-sim", features = ["parallel"] }
# Re-exported only when our `preview` feature is on; pulls in
# minifb + font8x8 transitively.
faer = "0.22"
hdf5-pure = "0.1"
rayon = "1"
ndarray = "0.16"
ndarray-npy = "0.9"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
smallvec = { version = "1", features = ["const_generics", "union"] }
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cudarc = { version = "0.19", optional = true, features = ["cuda-version-from-build-system", "cublas", "nccl"] }

[features]
default = []
cuda = ["cudarc"]
# Static geometry previewer (window via minifb). Opens a top-down
# CSG slice for visual sanity checks before launching transport.
preview = ["rust-mc-sim/preview"]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[lints.clippy]
# Correctness / safety lints kept on. Style-oriented pedantic lints
# are too noisy for a numerical codebase (single-char physics
# identifiers like E/A/Q, long literals for constants, similar names
# like e_cm/e_cm_out are intentional and documented).
unwrap_used = "deny"
undocumented_unsafe_blocks = "warn"
# Keep the cast lints that catch real bugs off — every XS lookup does
# idx-from-usize casts that are safe by construction.
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
# Numerical-code idioms that clippy flags but are deliberate here:
#   - Matrix / per-axis loops genuinely need the index (CRAM solver,
#     Gauss-Jordan, lattice axis dispatch, FSR walks).
#   - Transcendental constants (CRAM IPF poles/residues, Gauss-
#     Legendre nodes/weights) need every digit of f64 precision —
#     clippy's "excessive precision" treats them like typos.
#   - Documentation prose: aligned doc list continuations, lazy
#     continuations after a colon are intentional for readability of
#     physics derivations.
#   - Test fixtures that produce small `vec![…]` arrays — converting
#     to `[…]` saves two characters and obscures the intent.
#   - Per-step Tallies are typically built incrementally
#     (`Tallies::default()` then `.mesh_flux = Some(…)`); clippy's
#     `field_reassign_with_default` would force struct-update syntax.
#   - Transport / variance-reduction functions take many arguments
#     by physics necessity (XS, geometry, RNG, tallies, …).
needless_range_loop = "allow"
excessive_precision = "allow"
useless_vec = "allow"
doc_overindented_list_items = "allow"
doc_lazy_continuation = "allow"
field_reassign_with_default = "allow"
too_many_arguments = "allow"
collapsible_if = "allow"
collapsible_match = "allow"
double_comparisons = "allow"

[[bin]]
name = "gpu_compton_validate"
required-features = ["cuda"]

[[bin]]
name = "gpu_compton_scaling"
required-features = ["cuda"]

[[bin]]
name = "gpu_photon_features"
required-features = ["cuda"]

[[bin]]
name = "gpu_cpu_bench"
required-features = ["cuda"]

[[bin]]
name = "gpu_bench"
required-features = ["cuda"]

[[bin]]
name = "gpu_pwr_bench"
required-features = ["cuda"]

[[bin]]
name = "gpu_cpu_trace"
required-features = ["cuda"]

[[bin]]
name = "gpu_wmp_validate"
required-features = ["cuda"]

[[bin]]
name = "gpu_recursive_parity"
required-features = ["cuda"]

[[bin]]
name = "gpu_const_xs_keff"
required-features = ["cuda"]

[[bin]]
name = "gpu_recursive_keff"
required-features = ["cuda"]

[[bin]]
name = "gpu_assembly_keff"
required-features = ["cuda"]

[[bin]]
name = "xs_provider_diff"

[[bench]]
name = "reconstruction"
harness = false

[profile.release]
opt-level = 3
lto = "thin"

[profile.bench]
inherits = "release"
