[workspace]
members = [".", "bindings/python"]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT"
authors = ["Fabio Rodrigues <sorcerer86pt@gmail.com>"]
repository = "https://github.com/sorcerer86pt/open-rust-mc"

[workspace.dependencies]
# Shared dependency versions managed at the workspace level
rust-mc-sim = { git = "https://github.com/sorcerer86pt/Rust-MC-SimulationLib", features = ["parallel"] }
faer = "0.22"
ndarray = "0.16"
serde = { version = "1", features = ["derive"] }
cudarc = { version = "0.19", features = ["cuda-version-from-build-system", "cublas", "nccl"] }
rayon = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
toml = "0.8"

[workspace.lints.clippy]
# Physics-specific lint overrides applied across the entire workspace
unwrap_used = "deny"
undocumented_unsafe_blocks = "warn"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
needless_range_loop = "allow"
excessive_precision = "allow"
useless_vec = "allow"
doc_overindented_list_items = "allow"
doc_lazy_continuation = "allow"
field_reassign_with_default = "allow"
too_many_arguments = "allow"
collapsible_if = "allow"
collapsible_match = "allow"
double_comparisons = "allow"

[package]
name = "open-rust-mc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Inherited from workspace
rust-mc-sim = { workspace = true }
faer = { workspace = true }
ndarray = { workspace = true }
serde = { workspace = true }
rayon = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
cudarc = { workspace = true, optional = true }

# Local-only dependencies
hdf5-pure = "0.1"
ndarray-npy = "0.9"
smallvec = { version = "1", features = ["const_generics", "union"] }
num-complex = "0.4"
serde_json = "1"
# Nuclide kernel cache — see src/transport/nuclide_cache. DashMap drives
# the in-process L1 store, blake3 keys the L2 disk store (content-addressed
# so swapping ENDF/B-VII.1 for VIII.0 in the same path auto-invalidates
# entries), bytemuck does zero-copy reinterpretation of raw f64/i32 blobs
# for the binary on-disk format.
dashmap = "6"
blake3 = "1"
bytemuck = { version = "1", features = ["extern_crate_alloc"] }

[features]
default = []
cuda = ["cudarc"]
preview = ["rust-mc-sim/preview"]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[lints]
workspace = true

# --- Binaries ---

[[bin]]
name = "gpu_compton_validate"
required-features = ["cuda"]

[[bin]]
name = "gpu_compton_scaling"
required-features = ["cuda"]

[[bin]]
name = "gpu_photon_features"
required-features = ["cuda"]

[[bin]]
name = "gpu_cpu_bench"
required-features = ["cuda"]

[[bin]]
name = "gpu_bench"
required-features = ["cuda"]

[[bin]]
name = "gpu_pwr_bench"
required-features = ["cuda"]

[[bin]]
name = "gpu_cpu_trace"
required-features = ["cuda"]

[[bin]]
name = "gpu_wmp_validate"
required-features = ["cuda"]

[[bin]]
name = "gpu_recursive_parity"
required-features = ["cuda"]

[[bin]]
name = "gpu_const_xs_keff"
required-features = ["cuda"]

[[bin]]
name = "gpu_recursive_keff"
required-features = ["cuda"]

[[bin]]
name = "gpu_assembly_keff"
required-features = ["cuda"]

[[bin]]
name = "xs_provider_diff"

[[bench]]
name = "reconstruction"
harness = false

# --- Profiles ---

[profile.release]
opt-level = 3
lto = "fat"           # Full Link Time Optimization for cross-crate physics speed
codegen-units = 1     # Slower compile, but better optimization boundary
panic = "abort"       # Smaller binary, slightly faster execution by removing unwinding
strip = "symbols"     # Remove symbols to keep the production binary lean

[profile.bench]
inherits = "release"
debug = true          # Enable debug symbols for profiling (perf/samply)